--- a/main.html
+++ b/main.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%" border="1">
+    <table style="width: 100%; height: 100%" border="1px solid black">
       <!-- Your code here -->
 		<tr>
 			<td>
-				<table style="width: 100%; height: 100%" border="1">
+				<table style="width: 100%; height: 100%;margin-top:10%;margin-bottom:10%" border="1px solid black">
 				<th colspan="2">Nested Table 2</th>
 					
 					<tr>
-						<td>Column 1</td>
-						<td>Column 2</td>
+						<th>Column 1</th>
+						<th>Column 2</th>
 					</tr>
-					<tr>
+					<tr style="text-align:center">
 						<td>abc</td>
 						<td>def</td>
 					</tr>
@@ -27,10 +27,10 @@
 			</td>
 				 
 			<td>
-				<table style="width: 100%; height: 100%" border="1">
+				<table style="width: 100%" border="1">
 				<th colspan="2">Nested Table 1</th>
 					<tr><td>
-						<ul>
+						<ul style="text-align:center">
 						<li>List item</li>
 						<li>List item</li>
 						<li>List item</li>
@@ -43,9 +43,9 @@
 		</tr>
 	 <tr>
 		<td>
-		 <table style="width: 100%; height: 50%" border="1">
+		 <table style="width: 100%;margin-top:5%;margin-bottom:5%" border="1px solid black">
 		 <th colspan="2">Nested Table 3</th>
-			<tr>
+			<tr style="text-align:center">
 				<td><u>Nested table</u></td>
 				<td>Demo continued</td>
 			</tr>
@@ -53,10 +53,10 @@
 	
 	</td>
 		<td>
-			<table style="width: 100%; height: 100%" border="1">
+			<table style="width:100%" border="1">
 				<th>Nested Table 4</th>
-				<tr>
-					<td style="background-color:black" style="text-align:center" style="text-color:white">
+				<tr style="text-align:center;color:white;background-color:black">
+					<td >
 						HTML
 					</td>
 				</tr>
